examples/openid-connect/nginx-plus-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
    spec:
      serviceAccountName: nginx-ingress
      volumes:
      - name: openid-connect-js
        configMap:
          name: openid-connect.js
      - name: openid-connect-server-conf
        configMap:
          name: openid-connect.server-conf
      containers:
      - image: magicalyak/nginx-plus:OIDC
        imagePullPolicy: Always
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: readiness-port
          containerPort: 8081
       #- name: prometheus
         #containerPort: 9113
        readinessProbe:
          httpGet:
            path: /nginx-ready
            port: readiness-port
          periodSeconds: 1
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -nginx-plus
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
         #- -enable-app-protect
         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
          - -report-ingress-status
         # - -external-service=nginx-ingress
         # - -enable-leader-election
         #- -enable-prometheus-metrics
         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
          - -enable-custom-resources
          - -nginx-status-allow-cidrs=0.0.0.0/0  # This is insecure, try to restrict to smaller subnet
      imagePullSecrets:
        - name: regcred
